#7713 - poster gallery on mobile issue

--- a/sites/all/themes/slac_www/sass/pages.scss
+++ b/sites/all/themes/slac_www/sass/pages.scss
@@ -398,6 +398,14 @@ a.lightbox-processed{
     width: 95% !important;
     height: auto !important;
   }
+  #modalContainer{
+    width: 96% !important;
+    height: auto !important;
+    padding: 2% !important;
+  }
+  #frameHoverNav{
+    width: 90px !important;
+  }
 }
 
 /* Meeting Rooms table */
